--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <input type="email" name="myEmail" ng-model="myEmail" placeholder="Email *" required><br>
                     <input type="text" name="myUrl" ng-model="myUrl" placeholder="Sample Repo URL *" required><br>
 
-                    <textarea type="text" name="myDescription" ng-model="myDescription" placeholder="Description / Sample Repo*" class="myDescription" required></textarea>
+                    <textarea type="text" name="myDescription" ng-model="myDescription" placeholder="Description *" class="myDescription" required></textarea>
                 </div>
 
 
