--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="./img/favicon.png"/>
-    <title>Bluemix GitHub.io</title>
+    <title>Bluemix Code Samples | GitHub.io </title>
     <meta name="author" content="Twana Daniel || IBM Bluemix - Developer Advocate Team"/>
-    <meta name="description" content="The IBM-Bluemix GitHub.io site is a well-maintained, centralized, curated collection of open sample applications built using Bluemix and Bluemix services. The site gives developers a go-to page to see all Bluemix capabilities. There is option to filter samples by languages, categories or even industries to find the sample using the services you want."/>
+    <meta name="description" content="The IBM-Bluemix GitHub.io site is a well-maintained, centralized, curated collection of open sample applications built using Bluemix and Bluemix services."/>
     <meta name="keywords" content="Build a toolchain application on Bluemix, Bluemix code Samples, Watson code samples, IoT samples, Bluemix Samples, Mobile development on Bluemix, Cloudant database on Bluemix, Text to Speech, Speech To Text"/>
     <meta name="segment" property="IBM-Bluemix.GitHub.io" value="BluemixSample">
 
