--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <link rel="shortcut icon" href="./img/favicon.png"/>
     <title>Bluemix Code Samples | GitHub.io </title>
-    <meta name="author" content="Twana Daniel || IBM Bluemix - Developer Advocate Team"/>
+    <meta name="author" content="Twana Daniel || IBM Bluemix Developer Advocate Team"/>
     <meta name="description" content="The Bluemix GitHub.io site is a well-maintained, centralized, curated collection of open code samples built using Bluemix and Bluemix services"/>
-    <meta name="keywords" content="Samples,Tutorials,Code Samples,Bluemix,IBM Cloud,IoT,Watson,Cognitive,Cloudant,OpenWhisk,Bluemix Tutorials,Bluemix samples,mobile app,python,java,nodeJS,swift"/>
+    <meta name="keywords" content="Samples,Tutorials, Bluemix Tutorials, Code Samples,Bluemix,IBM Cloud,IoT,Watson,Cognitive,Cloudant,OpenWhisk,Bluemix Tutorials,Bluemix samples,mobile app,python,java,nodeJS,swift"/>
     <meta name="segment" property="IBM-Bluemix.GitHub.io" value="BluemixSample">
 
     <!-- FontAwesome icons -->
@@ -17,8 +17,8 @@
 
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/emojione-awesome.css"/>
-    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/NPS-Style.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/animations.css">
 
 
