update meta tags

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="./img/favicon.png"/>
-    <title>Bluemix Code Samples | GitHub.io </title>
+    <title>Bluemix Code Samples | Bluemix Tutorials | GitHub.io </title>
     <meta name="author" content="Twana Daniel || IBM Bluemix Developer Advocate Team"/>
-    <meta name="description" content="The Bluemix GitHub.io site is a well-maintained, centralized, curated collection of open code samples built using Bluemix and Bluemix services"/>
+    <meta name="description" content="The Bluemix GitHub.io site is a well-maintained, centralized, curated collection of open code samples built using Bluemix and Bluemix services. Find many Bluemix Samples and Bluemix Tutorials"/>
     <meta name="keywords" content="Samples,Tutorials, Bluemix Tutorials, Code Samples,Bluemix,IBM Cloud,IoT,Watson,Cognitive,Cloudant,OpenWhisk,Bluemix Tutorials,Bluemix samples,mobile app,python,java,nodeJS,swift"/>
     <meta name="segment" property="IBM-Bluemix.GitHub.io" value="BluemixSample">
 
