update footer events

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
         <footer>
 
             Made with <i class="fa fa-heart" aria-hidden="true"></i> by the Bluemix team</br>
-            Copyright © IBM 2017 | <a target="_blank" href="https://www.ibm.com/privacy/us/en/?lnk=flg-priv-usen" analytics-on="click" analytics-event="Footer To: Privacy" analytics-category="clickEvent">Privacy</a>
-            <br>Powered by <a id="IBMBluemix" target="_blank" href="https://www.ibm.com/cloud-computing/bluemix" analytics-on="click" analytics-event="Footer To: IBM Bluemix Site" analytics-category="clickEvent">IBM Bluemix</a>
+            Copyright © IBM 2017 | <a target="_blank" href="https://www.ibm.com/privacy/us/en/?lnk=flg-priv-usen" analytics-on="click" analytics-event="Footer To: Privacy" analytics-category="Footer" analytics-name="clickEvent">Privacy</a>
+            <br>Powered by <a id="IBMBluemix" target="_blank" href="https://www.ibm.com/cloud-computing/bluemix" analytics-on="click" analytics-event="Footer To: IBM Bluemix Site" analytics-category="Footer" analytics-name="clickEvent">IBM Bluemix</a>
             <br>
         </footer>
 
