--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="shortcut icon" href="./img/favicon.png"/>
     <title>Bluemix Code Samples | Bluemix Tutorials | GitHub.io </title>
     <meta name="author" content="Twana Daniel || IBM Bluemix Developer Advocate Team"/>
-    <meta name="description" content="The Bluemix GitHub.io site is a well-maintained, centralized, curated collection of open code samples built using Bluemix and Bluemix services. Find many Bluemix Samples and Bluemix Tutorials"/>
+    <meta name="description" content="Find Bluemix Samples, Bluemix Tutorials, Bluemix ChatBot Samples, Bluemix Node.js apps, Bluemix Java examples, Bluemix Apps, Bluemix demos"/>
     <meta name="keywords" content="Samples,Tutorials, Bluemix Tutorials, Code Samples,Bluemix,IBM Cloud,IoT,Watson,Cognitive,Cloudant,OpenWhisk,Bluemix Tutorials,Bluemix samples,mobile app,python,java,nodeJS,swift"/>
     <meta name="segment" property="IBM-Bluemix.GitHub.io" value="BluemixSample">
-
+    <meta name="google-site-verification" content="fUE5UABOVoKfMqnyk498ykxLXpTBhRdXQn7fD4Cb02w" />
     <!-- FontAwesome icons -->
     <link rel="stylesheet" href="//use.fontawesome.com/74dfc6cf47.css">
 
