--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="./img/favicon.png"/>
-    <title>Bluemix Code Samples | Bluemix Tutorials | GitHub.io </title>
+    <title>Bluemix Samples and Bluemix Tutorials</title>
     <meta name="author" content="Twana Daniel || IBM Bluemix Developer Advocate Team"/>
     <meta name="description" content="Find Bluemix Samples, Bluemix Tutorials, Bluemix ChatBot Samples, Bluemix Node.js apps, Bluemix Java examples, Bluemix Apps, Bluemix demos"/>
     <meta name="keywords" content="Samples,Tutorials, Bluemix Tutorials, Code Samples,Bluemix,IBM Cloud,IoT,Watson,Cognitive,Cloudant,OpenWhisk,Bluemix Tutorials,Bluemix samples,mobile app,python,java,nodeJS,swift"/>
