Update SEO keywords and tags

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="./img/favicon.png"/>
-    <title>Bluemix Samples and Bluemix Tutorials</title>
+    <title>Bluemix Samples, Bluemix Tutorials, Bluemix GitHub Apps</title>
     <meta name="author" content="Twana Daniel || IBM Bluemix Developer Advocate Team"/>
-    <meta name="description" content="Find Bluemix Samples, Bluemix Tutorials, Bluemix ChatBot Samples, Bluemix Node.js apps, Bluemix Java examples, Bluemix Apps, Bluemix demos"/>
-    <meta name="keywords" content="Samples,Tutorials, Bluemix Tutorials, Code Samples,Bluemix,IBM Cloud,IoT,Watson,Cognitive,Cloudant,OpenWhisk,Bluemix Tutorials,Bluemix samples,mobile app,python,java,nodeJS,swift"/>
+    <meta name="description" content="Bluemix Samples, Bluemix Tutorials, Bluemix Examples, Watson Samples, Bluemix Apps, Bluemix GitHub, Bluemix demos"/>
+    <meta name="keywords" content="Samples,Tutorials, Bluemix Tutorials, Code Samples, Bluemix, IBM Cloud, IoT, Watson, Cognitive, Cloudant, OpenWhisk, Bluemix Tutorials, Bluemix samples, mobile app, python, java, nodeJS, swift, Bluemix Code, Bluemix Apps, Watson Samples"/>
     <meta name="segment" property="IBM-Bluemix.GitHub.io" value="BluemixSample">
     <meta name="google-site-verification" content="fUE5UABOVoKfMqnyk498ykxLXpTBhRdXQn7fD4Cb02w" />
     <!-- FontAwesome icons -->
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="./css/NPS-Style.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/animations.css">
-
 
     <!-- ngDialog’s basic and theme CSS files -->
     <link rel="stylesheet" href="./css/ngDialogCSS/ngDialog.css">
@@ -48,8 +47,6 @@
                 </div>
             </div>
             <div class="header02">
-
-
                 <div class="social-icons">
 
                     <button type="button" ng-dialog="firstDialogId" ng-dialog-controller="InsideCtrl" ng-dialog-data="{{jsonData}}" ng-dialog-class="ngdialog-theme-default" ng-dialog-show-close="false" analytics-on="click" analytics-event="SubmitYourSample Popup">Submit Your Sample</button>
@@ -108,7 +105,6 @@
 
 <div class="rowFooter">
         <footer>
-
             Made with <i class="fa fa-heart" aria-hidden="true"></i> by the Bluemix team</br>
             Copyright © IBM 2017 | <a target="_blank" href="https://www.ibm.com/privacy/us/en/?lnk=flg-priv-usen" analytics-on="click" analytics-event="Footer To: Privacy" analytics-category="Footer" analytics-name="clickEvent">Privacy</a>
             <br>Powered by <a id="IBMBluemix" target="_blank" href="https://www.ibm.com/cloud-computing/bluemix" analytics-on="click" analytics-event="Footer To: IBM Bluemix Site" analytics-category="Footer" analytics-name="clickEvent">IBM Bluemix</a>
