--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="./img/favicon.png"/>
-    <title>Bluemix Samples, Bluemix Tutorials, Bluemix GitHub Apps</title>
-    <meta name="author" content="Twana Daniel || IBM Bluemix Developer Advocate Team"/>
-    <meta name="description" content="Bluemix Samples, Bluemix Tutorials, Bluemix Examples, Watson Samples, Bluemix Apps, Bluemix GitHub, Bluemix demos"/>
-    <meta name="keywords" content="Samples,Tutorials, Bluemix Tutorials, Code Samples, Bluemix, IBM Cloud, IoT, Watson, Cognitive, Cloudant, OpenWhisk, Bluemix Tutorials, Bluemix samples, mobile app, python, java, nodeJS, swift, Bluemix Code, Bluemix Apps, Watson Samples"/>
+    <title>IBM Cloud Samples, IBM Cloud Tutorials, IBM Cloud GitHub Apps</title>
+    <meta name="author" content="Twana Daniel || IBM"/>
+    <meta name="description" content="IBM Cloud Samples, IBM Cloud Tutorials, IBM Cloud Examples, Watson Samples, IBM Cloud Apps, IBM Cloud GitHub, IBM Cloud demos"/>
+    <meta name="keywords" content="Samples,Tutorials, IBM Cloud Tutorials, Code Samples, IBM Cloud, IBM Cloud, IoT, Watson, Cognitive, Cloudant, OpenWhisk, IBM Cloud Tutorials, IBM Cloud samples, mobile app, python, java, nodeJS, swift, IBM Cloud Code, IBM Cloud Apps, Watson Samples"/>
     <meta name="segment" property="IBM-Bluemix.GitHub.io" value="BluemixSample">
     <meta name="google-site-verification" content="fUE5UABOVoKfMqnyk498ykxLXpTBhRdXQn7fD4Cb02w" />
     <!-- FontAwesome icons -->
@@ -43,7 +43,7 @@
                     <a href="./#!/index"><img id="about" src="./icons/bluemix_logo.svg"></a>
                 </div>
                 <div class="row-details">
-                    <p class="list-group-item-text">IBM Bluemix | GitHub.io</p>
+                    <p class="list-group-item-text">IBM Cloud | GitHub.io</p>
                 </div>
             </div>
             <div class="header02">
@@ -105,9 +105,9 @@
 
 <div class="rowFooter">
         <footer>
-            Made with <i class="fa fa-heart" aria-hidden="true"></i> by the Bluemix team</br>
+            Made with <i class="fa fa-heart" aria-hidden="true"></i> by the IBM Cloud team</br>
             Copyright © IBM 2017 | <a target="_blank" href="https://www.ibm.com/privacy/us/en/?lnk=flg-priv-usen" analytics-on="click" analytics-event="Footer To: Privacy" analytics-category="Footer" analytics-name="clickEvent">Privacy</a>
-            <br>Powered by <a id="IBMBluemix" target="_blank" href="https://www.ibm.com/cloud-computing/bluemix" analytics-on="click" analytics-event="Footer To: IBM Bluemix Site" analytics-category="Footer" analytics-name="clickEvent">IBM Bluemix</a>
+            <br>Powered by <a id="IBMBluemix" target="_blank" href="https://www.ibm.com/cloud" analytics-on="click" analytics-event="Footer To: IBM Bluemix Site" analytics-category="Footer" analytics-name="clickEvent">IBM Cloud</a>
             <br>
         </footer>
 
