Add link tutorials page

--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
             </div>
             <div class="header02">
                 <div class="social-icons">
-
+                    <a href="https://console.bluemix.net/docs/tutorials/index.html#tutorials" target="_blank" class="tutorialsButton">Tutorials</a>                    
                     <button type="button" ng-dialog="firstDialogId" ng-dialog-controller="InsideCtrl" ng-dialog-data="{{jsonData}}" ng-dialog-class="ngdialog-theme-default" ng-dialog-show-close="false" analytics-on="click" analytics-event="SubmitYourSample Popup">Submit Your Sample</button>
-
+                    
                     <a class="icon" href="https://www.ibm.com/cloud" data-track-action="Icon"
-                       data-track-label="Bluemix" target="_blank" analytics-on="click" analytics-event="Header To: IBM Bluemix Site">
+                       data-track-label="Bluemix" target="_blank" analytics-on="click" analytics-event="Header To: IBM Cloud Site">
                        <img width="27" height="24" src="./icons/ibm-cloud-logo-white.svg"></a>
                     </a>
                     <a class="icon" data-track-action="Icon" data-track-label="StackOverFlow" target="_blank"
                        href="http://stackoverflow.com/questions/tagged/ibm-bluemix" analytics-on="click" analytics-event="Header To: StackOverFlow"><i class="fa fa-stack-overflow"></i></a>
                     <a class="icon" data-track-action="Icon" data-track-label="github" target="_blank"
-                       href="https://github.com/IBM-Bluemix" analytics-on="click" analytics-event="Header To: Main IBM GitHub"><i class="fa fa-github"></i></a>
+                       href="https://github.com/IBM-Cloud" analytics-on="click" analytics-event="Header To: Main IBM GitHub"><i class="fa fa-github"></i></a>
                 </div>
             </div>
         </div>
