Add tracking to the button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="header02">
                 <div class="social-icons">
-                    <a href="https://console.bluemix.net/docs/tutorials/index.html#tutorials" target="_blank" class="tutorialsButton">Tutorials</a>                    
+                    <a href="https://console.bluemix.net/docs/tutorials/index.html#tutorials" target="_blank" class="tutorialsButton" analytics-on="IBM-Cloud.GitHub.io button" analytics-event="IBM-Cloud.GitHub.io button">Tutorials</a>                    
                     <button type="button" ng-dialog="firstDialogId" ng-dialog-controller="InsideCtrl" ng-dialog-data="{{jsonData}}" ng-dialog-class="ngdialog-theme-default" ng-dialog-show-close="false" analytics-on="click" analytics-event="SubmitYourSample Popup">Submit Your Sample</button>
                     
                     <a class="icon" href="https://www.ibm.com/cloud" data-track-action="Icon"
