--- a/index.html
+++ b/index.html
@@ -48,13 +48,10 @@
             </div>
             <div class="header02">
                 <div class="social-icons">
+                    <!-- <button type="button" ng-dialog="firstDialogId" ng-dialog-controller="InsideCtrl" ng-dialog-data="{{jsonData}}" ng-dialog-class="ngdialog-theme-default" ng-dialog-show-close="false" analytics-on="click" analytics-event="SubmitYourSample Popup">Submit Your Sample</button> -->
                     <a href="https://console.bluemix.net/docs/tutorials/index.html#tutorials" target="_blank" class="tutorialsButton" analytics-on="IBM-Cloud.GitHub.io button" analytics-event="IBM-Cloud.GitHub.io button">Tutorials</a>                    
-                    <button type="button" ng-dialog="firstDialogId" ng-dialog-controller="InsideCtrl" ng-dialog-data="{{jsonData}}" ng-dialog-class="ngdialog-theme-default" ng-dialog-show-close="false" analytics-on="click" analytics-event="SubmitYourSample Popup">Submit Your Sample</button>
+                    <a href="https://github.com/IBM-Cloud/IBM-Cloud.github.io/issues/new" target="_blank" class="submitSample" analytics-on="Submit new sample" analytics-event="ubmit new sample">Submit Your Sample</a>                    
                     
-                    <a class="icon" href="https://www.ibm.com/cloud" data-track-action="Icon"
-                       data-track-label="Bluemix" target="_blank" analytics-on="click" analytics-event="Header To: IBM Cloud Site">
-                       <img width="27" height="24" src="./icons/ibm-cloud-logo-white.svg"></a>
-                    </a>
                     <a class="icon" data-track-action="Icon" data-track-label="StackOverFlow" target="_blank"
                        href="http://stackoverflow.com/questions/tagged/ibm-bluemix" analytics-on="click" analytics-event="Header To: StackOverFlow"><i class="fa fa-stack-overflow"></i></a>
                     <a class="icon" data-track-action="Icon" data-track-label="github" target="_blank"
@@ -187,7 +184,9 @@
                     </div>
                     <input type="text" name="myUrl" ng-model="myUrl" placeholder="Sample Repo URL *" required /><br>
 
-
+                    <div >
+                        <div>Description (Optional)</div>
+                    </div>
                     <textarea type="text" name="myDescription" ng-model="myDescription" placeholder="Description" class="myDescription"></textarea>
                 </div>
 
